--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-.card  {
+/* .card img {
     max-height: 200px;
+} */
+
+.card-img-top {
+   width: 300px !important;
 }
+
 
 @media only screen and (max-width: 600px) {
     body {
@@ -16,3 +21,11 @@
       flex-direction: column;
     }
   }
+
+
+  .underline-dark {
+    text-decoration: underline;
+    text-decoration-color: #dc3545; 
+    text-decoration-thickness: 20px;
+ }
+ 
